tests/macro-tests/cases/widget_new/malformed_property_path4.stderr
error: expected identifier
 --> cases/widget_new/malformed_property_path4.rs:7:23
  |
7 |         zng::layout:: = 0;
  |                       ^
